RESOLVED FIXED165046
Fix exception scope verification failures in runtime/Operations.cpp/h.
https://bugs.webkit.org/show_bug.cgi?id=165046
Summary Fix exception scope verification failures in runtime/Operations.cpp/h.
Mark Lam
Reported 2016-11-23 09:24:04 PST
Patch coming.
Attachments
proposed patch. (6.45 KB, patch)
2016-11-23 09:34 PST, Mark Lam
saam: review+
Mark Lam
Comment 1 2016-11-23 09:34:41 PST
Created attachment 295370 [details] proposed patch.
Saam Barati
Comment 2 2016-11-28 14:15:53 PST
Comment on attachment 295370 [details] proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=295370&action=review > Source/JavaScriptCore/runtime/Operations.cpp:54 > + auto p2String = p2.toString(callFrame); I think it's helpful to have types here. > Source/JavaScriptCore/runtime/Operations.cpp:61 > + auto p1String = p1.toString(callFrame); ditto
Mark Lam
Comment 3 2016-11-28 15:20:37 PST
Comment on attachment 295370 [details] proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=295370&action=review >> Source/JavaScriptCore/runtime/Operations.cpp:54 >> + auto p2String = p2.toString(callFrame); > > I think it's helpful to have types here. Fixed. >> Source/JavaScriptCore/runtime/Operations.cpp:61 >> + auto p1String = p1.toString(callFrame); > > ditto Fixed.
Mark Lam
Comment 4 2016-11-28 15:24:47 PST
Thanks for the review. Landed in r209030: <http://trac.webkit.org/r209030>.
Note You need to log in before you can comment on or make changes to this bug.