Fix exception scope verification failures in runtime/Operations.cpp/h. https://bugs.webkit.org/show_bug.cgi?id=165046

Reviewed by Saam Barati.

Also switched to using returning { } instead of JSValue().

* runtime/Operations.cpp:
(JSC::jsAddSlowCase):
(JSC::jsIsObjectTypeOrNull):
* runtime/Operations.h:
(JSC::jsStringFromRegisterArray):
(JSC::jsStringFromArguments):
(JSC::jsLess):
(JSC::jsLessEq):



Canonical link: https://commits.webkit.org/182734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209030 268f45cc-cd09-0410-ab3c-d52691b4dbfc